---------------------------------------------------------------------------------------------------
Version: 4.1.32
Date: ????
  Changes:
    - Reduce the required science packs for omnium processing from 25 to 15
  Bugfixes:
    - Fixed that the "Sorting gems" recipe was added even though unsorted gems were disabled by bob
---------------------------------------------------------------------------------------------------
Version: 4.1.31
Date: 2022.08.17
  Features:
    - WARNING: THIS WILL BREAK EXISTING SETUPS!
    - Added a new, plate made out of crushed stone and omnite that replaces the old omnicium plate
      targeting a faster early (burner-) game
    - Added Omcrete and Refined omcrete
  Changes:
    - Renamed omnicium to omnium
    - Lock omnium behind T1 technologies
    - Replaced omnium with the new omnicium in all early game recipes
    - Slightly adjusted other ingredients in those recipes if necessary
    - Lowered the omnite brick walking speed modifier from 150% to 140%
  Bugfixes:
    - Fixed that some SD omnite brick tile transitions used vanilla brick pictures
---------------------------------------------------------------------------------------------------
Version: 4.1.30
Date: 2022.07.05
  Bugfixes:
    - Fixed that crude ore refinement required 10x as much mining fluid as intended
---------------------------------------------------------------------------------------------------
Version: 4.1.29
Date: 2022.06.10
  Bugfixes:
    - Fixed some (recently introduced) incompatibilites with portal versions of pyrawores
    - Fix load issues with most recent bobores when gem sorting is disabled
---------------------------------------------------------------------------------------------------
Version: 4.1.28
Date: 2022.05.31
  Bugfixes:
    - Fixed that canisters were not excluded on omnilation recipe unlock checks for technologies
---------------------------------------------------------------------------------------------------
Version: 4.1.27