@@ -3,6 +3,7 @@ Version: 4.1.32
 Date: ????
   Changes:
     - Reduce the required science packs for omnium processing from 25 to 15
+    - Reduce the amount of crushed stone required for omnicium from 4 to 2 without angels refining
   Bugfixes:
     - Fixed that the "Sorting gems" recipe was added even though unsorted gems were disabled by bob
 ---------------------------------------------------------------------------------------------------
